# TerreImage

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Copyright.txt  Makefile  OTBApplications.py  README.md  ReleaseNote.txt  __init__.py  bug_svm.txt  manage_QGIS.py  manage_bands.py  metadata.txt  notes_windows.txt  processing_launcher.py  processing_manager.py  ptmaptool.py  qgiseducation.py  qgiseducationwidget.py  raoul-Win7-TerreImage-RelWithDebInfo-VC2010-2.cmake  resources.qrc  resources_rc.py  spectral_angle.py  terre_image_about.py  terre_image_configuration.py  terre_image_constant.py  terre_image_environement.py  terre_image_exceptions.py  terre_image_gdal_api.py  terre_image_gdal_system.py  terre_image_histogram.py  terre_image_logging.py  terre_image_manager.py  terre_image_processing.py  terre_image_run_process.py  terre_image_task.py  terre_image_utils.py  ui_bands.py  ui_bands.ui  ui_dlg.py  (+5 more)
ClassificationSupervisee/: ConfusionMatrixViewer.py  Makefile  OSIdentifier.py  QGisLayers.py  RasterLayerSelectorChildItem.py  RasterLayerSelectorItem.py  RasterLayerSelectorTable.py  VectorLayerSelectorItem.py  VectorLayerSelectorTable.py  __init__.py  classif.py  create_vrt_from_filelist.py  cropVectorDataToImage.py  mergeVectorData.py  metadata.txt  resources.qrc  resources_rc.py  supervisedclassification.py  supervisedclassificationdialog.py  ui_supervisedclassification.py
ClassificationSupervisee/Copyright/: Copyright.txt
ClassificationSupervisee_cpp/: CMakeLists.txt  otb-module.cmake  otbComputeLabelImagePopulation.cxx  otbCropVectorDataToImage.cxx  otbFullSVMClassificationChain.cxx
ClassificationSupervisee_cpp/app/: CMakeLists.txt
DockableMirrorMap/: DlgAbout.py  __init__.py  dockableMirrorMap.py  dockableMirrorMapPlugin.py  mirrorMap.py  resources.qrc  resources_rc.py
OTB_TerreImage/: CMakeLists.txt  otb-module.cmake
OTB_TerreImage/app/: CMakeLists.txt  otbComputeLabelImagePopulation.cxx
OTB_TerreImage/test/: CMakeLists.txt
help/source/: conf.py  index.rst
img/: icon.png.orig  icon.xcf
packaging/: BundleFixing.cmake  CMakeLists.txt  otbcli.bat
tests/src/: terre_image_test_case.py  test_ConfusionMatrixViewer.py  test_OTBApplication.py  test_terre_image_classif.py  test_terre_image_logging.py  test_terre_image_processing.py  test_terre_image_run_process.py  test_terre_image_utils.py  test_terre_image_working_layer.py  tests_cropVectorDataToImage.py  tests_gdalApi.py  tests_gdalSystem.py  tests_mergeVectorData.py
valuetool/: Makefile  __init__.py  ptmaptool.py  resources.qrc  resources_rc.py  terre_image_curve.py  ui_terre_image_curve.py  ui_terre_image_curve.ui  ui_valuewidgetbase.py  ui_valuewidgetbase.ui  valuetool.py  valuewidget.py
